# Orchestra

./: .cursorignore  .env.example  .flake8  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .safety-project.ini  .testmondata-shm  .yamllint.yaml  Dockerfile  EPIC3_IMPLEMENTATION_SUMMARY.md  Makefile  README-overlays.md  README.md  SECURITY.md  bandit.yaml  codecov.yml  coverage.json  docker-compose.yml  mypy_status.txt  pyproject.toml  pytest.ini  test_security.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  security_vulnerability.yml
.github/workflows/: ci.yaml  ci.yml  dependency-update.yml  monitoring.yml  pr-validation.yml  pre-commit.yml  release.yml  security-scan.yml
docs/: CI-CD-PIPELINE.md  DEVELOPMENT-SECURITY.md  HYBRID-MIGRATION-GUIDE.md  MANUAL-BRANCH-PROTECTION-SETUP.md  TESTING-NOTES.md  VICTORY-ROADMAP-1-25.md  architecture.md  bmad-content-inventory-report.md  ci-cd.md  current-implementation.md  epic-1-bmad-foundation-complete.md  epic-1-bmad-foundation.md  epic-1-feature-flags.md  epic-1-rollback-procedures.md  epic-2-memory-learning.md  epic-2-sprint-ready-validation.md  epic-3-implementation-report.md  epic-3-live-intelligence-adaptive.md  epic-4-collaboration-domain.md  epic-5-ai-team-builder.md  epic-6-security-hardening-integration.md  epic-list.md  files-analysis-untouched.md  goals-and-background-context.md  index.md  infrastructure-recovery-procedures.md  infrastructure-security-plan.md  mylo-todo.md  persona-system.md  requirements.md  testing-25-victories-complete.md  testing-analysis-agent-factory-complete.md  testing-analysis-agent-factory.md  testing-analysis-ai-agent-security-complete.md  testing-analysis-ai-agent-validator-complete.md  testing-analysis-ai-agent-validator.md  testing-analysis-cli-commands.md  testing-analysis-cli-main.md  testing-analysis-conflict-resolution-complete.md  testing-analysis-conflict-resolution-service.md  (+16 more)
docs/architecture/: ai-safety-and-security-framework.md  api-specification.md  apis.md  backend-architecture.md  brownfield-architecture.md  cli-architecture.md  coding-standards.md  component-diagram.md  components.md  core-workflows.md  data-and-isolation.md  data-models.md  database-schema.md  deployment-architecture.md  development-workflow.md  external-apis.md  governance-and-safety.md  high-level-architecture.md  index.md  introduction.md  next-steps.md  performance-reliability.md  security-and-performance.md  security.md  simplified-project-structure.md  source-tree-integration.md  source-tree.md  tech-stack.md  technical-summary.md  test-strategy-and-standards.md  testing-strategy.md
docs/inventory/: conversion-plan.json
docs/prd/: epic-1-foundation-openai-agents-sdk.md  epic-2-orchestrator-implementation.md  epic-3-developer-agent-implementation.md  epic-4-release-agent-git-integration.md  epic-5-temporal-openai-integration.md  epic-6-end-to-end-validation-production-readiness.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.bmad-content-inventory-and-conversion-strategy.md  1.1.dev-environment-setup.md  1.10.tag-based-targeting.md  1.11.broadcast-and-policy-cascade.md  1.12.policy-versioning-diff-rollback.md  1.2.convert-13-bmad-personas-to-orchestra-yaml.md  1.2.openai-agents-sdk-integration.md  1.3.integrate-tasks-templates-checklists-as-resources.md  1.3.temporal-openai-integration.md  1.4.dynamic-knowledge-base.md  1.4.expand-cli-persona-selection-and-e2e-validation.md  1.5.knowledge-sync-conflict-resolution.md  1.5.persona-overlay-merge-engine.md  1.6.directory-scaffolding-for-overlays.md  1.6.universal-agent-persona-system.md  1.7.context-aware-loader-api.md  1.7.phase-1-completion.md  1.8.namespaced-storage.md  1.9.cli-commands-for-context-management.md  2.1.persona-memory-infrastructure.md  2.2.adaptive-learning-engine.md  2.3.cross-persona-knowledge-sharing.md  3.1.live-intelligence-integration.md  3.2.context-aware-adaptive-resources.md  3.3.predictive-intelligence-engine.md  3.4.developer-persona-specializations.md  mylo-todo.md
docs/testing/: README.md  issues-log.md  openai-testing-best-practices.md  temporal-workflow-testing-guide.md
docs/vendors/: openai-agent-sdk-guide.md  temporal-guide.md
orchestra/cli/: circuit_breaker_commands.py  commands.py  main.py  output.py  persona_activation.py  persona_discovery.py  security_commands.py
orchestra/config/: settings.py
orchestra/models/: __init__.py  context.py  intelligence.py  knowledge.py  learning.py  memory.py  predictive.py  shared_knowledge.py
orchestra/personas/: analyst.yaml  architect.yaml  bmad-dev.yaml  bmad-master.yaml  bmad-orchestrator.yaml  dev.yaml  infra-devops-platform.yaml  master.yaml  orchestrator.yaml  persona-00.yaml  persona-01.yaml  persona-02.yaml  persona-03.yaml  persona-04.yaml  persona-05.yaml  persona-06.yaml  persona-07.yaml  persona-08.yaml  persona-09.yaml  persona-10.yaml  persona-11.yaml  persona-12.yaml  pm.yaml  po.yaml  qa.yaml  sm.yaml  spec.yaml  tdd-dev.yaml  ux-expert.yaml
orchestra/schemas/: checklist.schema.json  persona.schema.json  task.schema.json  template.schema.json
orchestra/security/: ai_agent_validator.py
orchestra/services/: __init__.py  adaptive_service.py  ai_analysis_service.py  conflict_resolution_service.py  embedding_service.py  external_service_client.py  intelligence_service.py  knowledge_service.py  memory_service.py  pattern_matching_service.py  predictive_service.py
orchestra/system/: __init__.py  agent.py  (+15 more)
scripts/: check-coverage.py  config-backup.sh  daily-backup.sh  fix_code_quality.py  health_check.py  init_db.py  restore-backup.sh  run_ci_locally.py  safe-runner.py  security_check.py  setup-backup-automation.sh  setup-branch-protection.sh  setup-check.py  setup-security.py  setup.py  setup_ci.py  validate-all-scripts.py  validate-resources.py  validate_agent_code.py  validate_licenses.py  validate_prompts.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+243 files in other folders)
