[tool.poetry]
name = "orchestra"
version = "0.1.0"
description = "AI Agent System for Development Team Orchestration"
authors = ["Orchestra Development Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.0"
# Build tools (security update)
setuptools = "^78.1.1"
# CLI Framework
typer = "^0.14.0"
rich = "^13.9.0"
# Agent Framework
openai = "^1.100.0"
# Input Validation and Data Models
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"
# HTTP Client
httpx = "^0.27.0"
# Configuration and Logging
structlog = "^24.4.0"
# Security Framework
cryptography = "^44.0.0"
# Database
aiosqlite = "^0.20.0"
# Temporal SDK (placeholder - actual SDK TBD)
# temporalio = "^1.7.0"
# Vector Database
pinecone-client = "^2.2.4"
openai-agents = "^0.2.8"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
# Code Quality
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"
# Security
bandit = "^1.8.0"
pip-audit = "^2.7.0"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
orchestra = "src.cli.main:app"

[build-system]
requires = ["poetry-core", "setuptools>=78.1.1"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']

# isort configuration
[tool.isort]
profile = "black"
line_length = 88

# Ruff configuration - minimal
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F"]  # Just errors, warnings, and pyflakes
ignore = ["E501"]  # line too long, handled by black

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
