[tool.poetry]
name = "orchestra"
version = "0.1.0"
description = "AI Agent System for Development Team Orchestration"
authors = ["Orchestra Development Team"]
readme = "README.md"
packages = [{include = "orchestra"}]

[tool.poetry.dependencies]
python = "^3.13.0"
# Build tools (security update)
setuptools = "^78.1.1"
# CLI Framework
typer = "^0.16.0"
rich = "^13.9.0"
# Agent Framework
openai = "^1.100.0"
# Input Validation and Data Models
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"
# HTTP Client
httpx = "^0.27.0"
# Configuration and Logging
structlog = "^24.4.0"
# Security Framework
cryptography = "^44.0.0"
# Database
aiosqlite = "^0.20.0"
# Temporal SDK (placeholder - actual SDK TBD)
temporalio = "^1.7.0"
# Vector Database
qdrant-client = "^1.7.0"
pip-audit = "^2.7.0"
# openai-agents removed - using universal persona model
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-testmon = "^2.1.0"
pytest-xdist = "^3.6.1"
# Code Quality
black = "^25.1.0"
isort = "^5.13.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
# Development tools
bandit = "^1.8.0"
pip-audit = "^2.7.0"
pre-commit = "^4.3.0"
types-PyYAML = "^6.0.12"
# Enterprise security tools (add when ready)
# safety = "^3.2.0"  # Has dependency conflicts, use pip-audit instead
# detect-secrets = "^1.5.0"
# semgrep = "^1.45.0"
pytest-timeout = "^2.4.0"

[tool.poetry.scripts]
orchestra = "orchestra.cli.main:app"

[build-system]
requires = ["poetry-core", "setuptools>=78.1.1"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py313']

# isort configuration
[tool.isort]
profile = "black"
line_length = 88

# Ruff configuration - minimal
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F"]  # Just errors, warnings, and pyflakes
ignore = ["E501"]  # line too long, handled by black

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=orchestra --cov-fail-under=90 --cov-report=term-missing --cov-report=html --cov-report=json --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "CRITICAL"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
filterwarnings = [
# agents package filters removed - using universal persona model
    "ignore:.*I/O operation on closed file.*",
    "ignore:.*Shutting down trace provider.*",
    "ignore:.*trace processor.*",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg"]

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Only ignore truly problematic modules that need extensive refactoring
[[tool.mypy.overrides]]
module = [
    "orchestra.utils.circuit_breaker",
    "orchestra.security.*",
    "orchestra.services.external_service_client"
]
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true
